--- a/views/check.ejs
+++ b/views/check.ejs
@@ -6,18 +6,69 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   </head>
   <body>
+    <style>
+      .payment-checker {
+        width: 300px;
+      }
+
+      .payment-checker-item {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 4px;
+      }
+      .payment-checker-item-last {
+        display: flex;
+        justify-content: flex-end;
+      }
+    </style>
     <div id="app">
       <!-- <form action="https://core.spgateway.com/MPG/mpg_gateway" method="post"> -->
       <form action="https://ccore.spgateway.com/MPG/mpg_gateway" method="post">
-        <input type="text" name="MerchantID" value="MS140625957">
-        <input type="text" name="TradeSha" :value="order.shaEncrypt">
-        <input type="text" name="TradeInfo" :value="order.aesEncrypt">
-        <input type="text" name="TimeStamp" :value="order.order.TimeStamp">
-        <input type="text" name="Version" :value="1.5">
-        <input type="text" name="MerchantOrderNo" :value="order.order.MerchantOrderNo">
-        <input type="text" name="Amt" :value="order.order.Amt">
-        <input type="email" name="Email" :value="order.order.Email">
-        <button type="submit">送出</button>
+        <ul class="payment-checker">
+          <li class="payment-checker-item">
+            <label class="" for="">MerchantID:</label>
+            <input type="text" name="MerchantID" value="MS140625957">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">TradeSha:</label>
+            <input type="text" name="TradeSha" :value="order.shaEncrypt">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">TradeInfo:</label>
+            <input type="text" name="TradeInfo" :value="order.aesEncrypt">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">TimeStamp:</label>
+            <input type="text" name="TimeStamp" :value="order.order.TimeStamp">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">Version:</label>
+            <input type="text" name="Version" :value="1.5">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">MerchantOrderNo:</label>
+            <input type="text" name="MerchantOrderNo" :value="order.order.MerchantOrderNo">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">Amt:</label>
+            <input type="text" name="Amt" :value="order.order.Amt">
+          </li>
+          <li class="payment-checker-item">
+            <label for="">Email:</label>
+            <input type="email" name="Email" :value="order.order.Email">
+          </li>
+          <li class="payment-checker-item-last">
+            <button type="submit">送出</button>
+          </li>
+        </ul>
+        
+        
+        
+        
+        
+        
+        
+        
       </form>
     </div>
     <script type="module">
