feat: [藍新金流] 調整 /createOrder /getOrderInfo 的 response 值時同步修正測試頁面取得參數位置

--- a/views/check.ejs
+++ b/views/check.ejs
@@ -91,7 +91,8 @@
           const url = `/payment/getOrderInfo/${this.orderId}`
 
           const res = await axios.get(url)
-          this.order = res.data
+          this.order = res.data.data
+          console.log(res);
         },
         methods:{
           
